--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -15,6 +15,7 @@ $purple-dark: #5f3a8a;
 $grey: #cccccc;
 $grey-light: #d6cfde;
 
+$sub-nav-color: #160029;
 $id-color: #127db3;
 $link-color: #6c2db5;
 $title-color: #300E56;
@@ -22,6 +23,7 @@ $text-color: #333333;
 $second-text-color: #666666;
 $third-text-color: #7749ac;
 $placeholder-color: #c1c1c1;
+$grey-word: #a6a1ab;
 
 $background-color: #f6f6f8;
 $background-color-lighter: #ffffff;
@@ -39,7 +41,7 @@ $warning: $yellow;
 $success: $green;
 
 $family-primary: $family-sans-serif;
-$body-background-color: $background-color-lighter;
+$body-background-color: $background-color;
 
 $size-small: 12px;
 $size-medium: 16px; // 中号字体
