--- a/src/components/ManageTabs/index.scss
+++ b/src/components/ManageTabs/index.scss
@@ -1,32 +1,24 @@
 @import "~scss/variables";
 
 .tabs {
-  height: 52px;
-  margin-bottom: 27px;
+  height: 48px;
+  margin-bottom: 24px;
   background-color: #ffffff;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.04);
-
   .tabsList {
     width: $content-width;
     margin: 0 auto;
-    padding: 12px 0 0 0;
     overflow: hidden;
-
     li {
-      float: left;
-      margin: 0 25px 0 0;
+      display: inline-block;
+      margin-left: 24px;
+      line-height: 46px;
       list-style: none;
-
       a {
-        display: block;
-        width: 90px;
-        height: 40px;
-        line-height: 40px;
-        text-align: center;
+        display: inline-block;
         font-size: $body-size;
         color: $title-color;
         box-sizing: border-box;
-
         &.active {
           border-bottom: 2px solid $primary;
           color: $primary;
