--- a/src/components/Banner/index.scss
+++ b/src/components/Banner/index.scss
@@ -7,7 +7,7 @@
   border-bottom: 1px solid $border;
   .wrapper {
     width: $content-width;
-    margin: 0 auto;
+    margin: 0 $layout-margin;
   }
   .title {
     width: 470px;
