--- a/src/containers/Home/index.scss
+++ b/src/containers/Home/index.scss
@@ -1,13 +1,10 @@
 @import "~scss/variables";
 
-.home {
-
-}
 .content{
   position: relative;
-  width: $content-width;
   height: $main-height;
-  margin: 0 auto;
+  margin: 0 $layout-margin;
+
   .nav {
     position: absolute;
     top: 0;
@@ -17,7 +14,7 @@
     border-right: 2px solid $border;
   }
   .apps {
-    margin-left: 288px;
+    margin-left: 252px;
     padding-bottom: 95px;
   }
   &.fixNav {
@@ -25,7 +22,7 @@
     .nav {
       position: fixed;
       top: $header-height;
-      left: calc(50vw - #{$content-width}/2);
+      left: $layout-margin;
       height: 100%;
     }
   }
