--- a/src/components/DetailCard/index.scss
+++ b/src/components/DetailCard/index.scss
@@ -14,7 +14,7 @@
     border-radius: 2px;
   }
   .title{
-    margin-left: 39px;
+    padding-left: 36px;
     padding-bottom: 24px;
     border-bottom: 1px solid $border-lighter;
     .name{
@@ -32,7 +32,10 @@
     .preview{
       line-height: 17px;
       font-size: 14px;
-      color: $text-color;
+      color: $title-color;
+      a:active{
+        color: $title-color;
+      }
     }
   }
   .detail{
