--- a/src/components/Rectangle/index.scss
+++ b/src/components/Rectangle/index.scss
@@ -17,13 +17,17 @@
     //transform: translate3d(0, -10px, 0);
     box-shadow: 0 2px 8px 0 rgba(48, 14, 86, 0.08), 0 2px 10px 0 rgba(48, 14, 86, 0.04), 0 6px 20px 0 rgba(48, 14, 86, 0.16), 0 0 16px 0 rgba(48, 14, 86, 0.04);
   }
-  .title{
+  .title a{
+    display: block;
     margin-bottom: 8px;
     font-size: 24px;
     font-weight: 500;
     line-height: 1.0;
     text-align: left;
     color: #333333;
+    &:hover{
+      color: $title-color
+    }
   }
   .idNo{
     margin-bottom: 17px;
