--- a/src/containers/Repos/index.scss
+++ b/src/containers/Repos/index.scss
@@ -63,57 +63,16 @@
 }
 .repoContent {
   position: relative;
-  box-sizing: border-box;
-  margin-bottom: 12px;
   height: 150px;
-  padding: 24px;
-  border-radius: 3px;
-  background-color: #ffffff;
-  box-shadow: 0 1px 4px 0 rgba(48, 14, 86, 0.06), 0 4px 8px 0 rgba(0, 0, 0, 0.04);
-  .inner {
-    height: 74px;
-    .operation{
-      float: right;
-      color: #5f3a89;
-      font-size: 16px;
-      cursor: pointer;
-    }
-  }
-  .cloumn {
-    display: inline-block;
-    float: left;
-    margin-bottom: 16px;
-    &:nth-child(1) {
-      width: 420px;
-      margin-right: 120px;
-    }
-    &:nth-child(2) {
-      width: 180px;
-      margin-top: 8px;
-    }
-    &:nth-child(3) {
-      width: 320px;
-      margin-top: 8px;
-    }
-  }
-  .titleName {
-    line-height: 24px;
-    font-size: 20px;
-    font-weight: 500;
-    text-align: left;
-    color: $title-color;
-  }
-  .description {
-    line-height: 17px;
-    font-size: 12px;
-    text-align: left;
-    color: $grey-word;
-  }
-  .title {
-    line-height: 24px;
-    font-size: 12px;
-    color: $grey-word;
+  margin-bottom: 12px;
+  .handlePop {
+    position: absolute;
+    right: -30px;
+    top: 25px;
+    width: 130px;
+    text-align: center;
   }
 }
+
 
 
