--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -46,7 +46,7 @@ $warning: $yellow;
 $success: $green;
 
 $family-primary: $family-sans-serif;
-$body-background-color: $background-color-lighter;
+$body-background-color: $background-color;
 
 $size-small: 12px;
 $size-normal: 14px;
