--- a/src/components/TagShow/index.scss
+++ b/src/components/TagShow/index.scss
@@ -5,6 +5,7 @@
   margin-right: 15px;
   .inner{
     display: inline-block;
+    line-height: 14px;
     height: 23px;
     border-radius: 1px;
     border: 1px solid #f5c414;
@@ -33,7 +34,7 @@
   .inner{
     border: 1px solid #e2d0f2;
     color: #7749ac;
-    margin-bottom: 15px;
+    margin-bottom: 10px;
   }
   .content{
     background: #e2d0f2;
