--- a/src/containers/Home/index.scss
+++ b/src/containers/Home/index.scss
@@ -4,6 +4,7 @@
   position: relative;
   height: $main-height;
   margin: 0 $layout-margin;
+  width: $content-width;
 
   .nav {
     position: absolute;
