--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -25,6 +25,7 @@ $third-text-color: #7749ac;
 $placeholder-color: #c1c1c1;
 $grey-word: #a6a1ab;
 $purple-name: #9d80bf;
+$purple-word: #1c062f;
 
 $background-color: #f6f6f8;
 $background-color-lighter: #ffffff;
