--- a/server/views/index.pug
+++ b/server/views/index.pug
@@ -11,6 +11,7 @@ html(lang="en")
     link(rel="stylesheet" href="/assets/css/normalize.min.css")
     link(rel="stylesheet" href="/assets/fonts/roboto/roboto.css")
     link(href='https://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.min.css' rel="stylesheet")
+    link(href='https://cdn.bootcss.com/bootstrap/4.0.0/css/bootstrap.min.css' rel="stylesheet")
 
     if !isDev
       link(href= bundlePrefix + '/bundle.css' rel="stylesheet" media="all")
