--- a/src/containers/Overview/index.scss
+++ b/src/containers/Overview/index.scss
@@ -23,6 +23,7 @@
     padding: 16px 16px 20px 16px;
     width: 360px;
     height: 420px;
+    overflow: hidden;
     border-radius: 3px;
     background-color: #ffffff;
     box-shadow: 0 1px 4px 0 rgba(48, 14, 86, 0.06), 0 4px 8px 0 rgba(0, 0, 0, 0.04);
