--- a/src/components/TdName/index.scss
+++ b/src/components/TdName/index.scss
@@ -4,6 +4,7 @@
   display: inline-block;
   .image{
     display: inline-block;
+    float: left;
     margin: 3px 12px 3px 0;
     width: 24px;
     height: 24px;
