modify review issues (Naming spelling,file rename)

--- a/src/components/Card/index.scss
+++ b/src/components/Card/index.scss
@@ -2,7 +2,7 @@
 
 .card {
    display: inline-block;
-   width: 264px;
+   width: $card-width;
    padding: 16px 24px 24px;
    margin: 24px 24px 0 0;
    border-radius: 3px;
