--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -24,6 +24,7 @@ $second-text-color: #666666;
 $third-text-color: #7749ac;
 $placeholder-color: #c1c1c1;
 $grey-word: #a6a1ab;
+$grey-time: #9b9b9b;
 $purple-name: #9d80bf;
 $purple-word: #1c062f;
 
@@ -71,6 +72,7 @@ $header-height: 48px;
 $banner-height: 400px;
 $footer-height: 64px;
 $base-margin: 24px;
+$card-width: 264px;
 
 $main-height: calc(100vh - #{$footer-height});
 
