--- a/src/components/Rectangle/index.scss
+++ b/src/components/Rectangle/index.scss
@@ -29,7 +29,7 @@
       color: $title-color
     }
   }
-  .idNo{
+  .idShow{
     margin-bottom: 17px;
     line-height: 14px;
     font-size: 12px;
