--- a/src/containers/manage/Clusters/ClusterDetail/index.scss
+++ b/src/containers/manage/Clusters/ClusterDetail/index.scss
@@ -91,3 +91,31 @@
     }
   }
 }
+.modelContent{
+  .name{
+    display: inline-block;
+    float: left;
+    width: 260px;
+    line-height: 16px;
+    font-family: Roboto;
+    font-weight: bold;
+    text-align: right;
+    color: $title-color;
+  }
+  .info{
+    margin: 0 0 20px 280px;
+    .value{
+      margin-bottom: 3px;
+      line-height: 16px;
+      font-size: 14px;
+      color: $text-color;
+    }
+    .explain{
+      line-height: 17px;
+      font-size: 12px;
+      color: #626466;
+    }
+  }
+
+
+}
