1.add runtime add page 2.manage file rename "Manage" 3.statistics data from api-server
remove category store

--- a/src/components/Base/Pagination/index.scss
+++ b/src/components/Base/Pagination/index.scss
@@ -50,7 +50,7 @@
         background-color: $primary;
 
         a {
-          color: #fff;
+          color: #fff !important;
         }
 
         &:focus, &:hover {
