--- a/src/components/Statistics/index.scss
+++ b/src/components/Statistics/index.scss
@@ -1,7 +1,7 @@
 @import "~scss/variables";
 
 .statistics{
-  .warper{
+  .wrap{
     margin: 0 auto 24px;
     width: $content-width;
     height: 120px;
