--- a/src/containers/Manage/Repos/Add/index.scss
+++ b/src/containers/Manage/Repos/Add/index.scss
@@ -19,7 +19,7 @@
       color: $title-color;
       border-bottom: 1px solid #dadcde;
     }
-    from{
+    form{
       display: block;
       padding: 24px 0 0 24px;
       &>div{
