--- a/src/components/Banner/index.scss
+++ b/src/components/Banner/index.scss
@@ -6,8 +6,9 @@
   background-image: linear-gradient(-145deg, #F7F7F9 2%, #EDECF0 100%);
   border-bottom: 1px solid $border;
   .wrapper {
+    position: relative;
     width: $content-width;
-    margin: 0 $layout-margin;
+    margin: 0 auto;
   }
   .title {
     width: 470px;
@@ -40,22 +41,22 @@
   :global {
     .banner-img-1 {
       position: absolute;
-      top: 138px;
-      left: 50vw;
+      top: 0;
+      right: 420px;
       z-index: 1;
       width: 150px;
     }
     .banner-img-2 {
       position: absolute;
-      top: -46px;
-      left: calc(50vw + 212px);
+      top: -130px;
+      right: 190px;
       z-index: 1;
       width: 155px;
     }
     .banner-img-3 {
       position: absolute;
-      top: 250px;
-      left: calc(50vw + 279px);
+      top: 125px;
+      right: 175px;
       z-index: 1;
       width: 115px;
     }
