--- a/src/containers/Manage/Apps/index.scss
+++ b/src/containers/Manage/Apps/index.scss
@@ -50,3 +50,16 @@
     margin-left: 10px;
   }
 }
+
+.modalContent{
+  .noteWord{
+    font-size: 16px;
+    margin-bottom: 30px;
+  }
+  .operation{
+    text-align: center;
+    button{
+      margin: 0 6px;
+    }
+  }
+}
