--- a/src/containers/Manage/Users/index.scss
+++ b/src/containers/Manage/Users/index.scss
@@ -5,26 +5,58 @@
 }
 .container {
   width: $content-width;
-  margin: 0 auto;
-}
-.wrapper {
-  margin: 0 0 25px 0;
+  margin: 0 auto 24px;
   border-radius: 3px;
   background-color: #fff;
   box-shadow: 0 1px 4px 0 rgba(48, 14, 86, 0.06), 0 4px 8px 0 rgba(0, 0, 0, 0.04);
+  .leftNav{
+    float: left;
+    width: 360px;
+    height: 100vh;
+    padding: 24px;
+    border-right: 2px solid #e8e8e8;
+    background-color: #fff;
+    .select{
+      width: 310px;
+      margin-bottom: 22px;
+    }
+  }
+  .rightTab{
+    margin-left:358px;
+    width: 770px;
+    border-left: 2px solid #e8e8e8;
+  }
+  .wrapper {
+    margin: 0 0 25px 0;
+    border-radius: 3px;
+    background-color: #fff;
+    box-shadow: 0 1px 4px 0 rgba(48, 14, 86, 0.06), 0 4px 8px 0 rgba(0, 0, 0, 0.04);
+  }
 }
 
+.selectedInfo{
+  padding: 32px 24px 8px;
+  .selected{
+    display: inline-block;
+    line-height: 16px;
+    font-size: 14px;
+    font-weight: 500;
+    color: #7749ac;
+  }
+  .action{
+    float: right;
+    cursor: pointer;
+  }
+}
 .toolbar {
   padding: 24px;
-
   .select {
     width: 176px;
     vertical-align: top;
-
     div {
       box-shadow: none !important;
     }
-  }  
+  }
 }
 
 .search {
@@ -49,9 +81,6 @@
 }
 .ml12{
   margin-left: 12px;
-}
-.tableOuter{
-  margin: 0 12px;
 }
 .list {
   padding: 0 24px;
@@ -95,5 +124,50 @@
         margin-left: 16px;
       }
     }
+  }
+}
+
+.page{
+  margin: 0 24px;
+}
+
+.authorityModal{
+  overflow: auto;
+  .category{
+    .title{
+      line-height: 14px;
+      color: #020508;
+      font-weight: bold;
+    }
+    .description{
+      margin: 0 0 10px 22px;
+      line-height: 24px;
+      font-size: 14px;
+      color: #324558;
+    }
+  }
+  .operation{
+    margin-top:30px;
+    text-align: right;
+    button{
+      margin-left: 12px;
+    }
+  }
+}
+
+.authorityList{
+  margin-bottom: 28px;
+  padding: 16px 20px 4px 20px;
+  background-color: #e2d0f2;
+  li{
+    margin-bottom: 4px;
+    line-height: 16px;
+  }
+}
+.innerList{
+  margin: 4px 0 20px 22px;
+  li{
+    display: inline-block;
+    width: 50%;
   }
 }
