--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -52,6 +52,9 @@
     color: $id-color;
   }
 
+  //.active {
+  //  background: rgba($border-dark, 0.5);
+  //}
 
   .dropdown-item {
     &.active, &:active {
