feat: runtime and repo creation, enhance manage page container component - separate component business logic to store, enhance root store register - deprecate isomorphic-fetch, using superagent - upgrade api forward logic - refactor manage tabs - refactor repo page

--- a/src/components/TodoList/index.scss
+++ b/src/components/TodoList/index.scss
@@ -3,7 +3,8 @@
   margin-left: 140px;
   line-height: 14px;
   .item{
-    max-width: 300px;
+    width: 360px;
+    max-width: 70%;
     line-height: 20px;
     clear: both;
     margin: 10px 0;
@@ -11,6 +12,7 @@
     span {
       display: inline-block;
       width: 80%;
+      margin-left: 10px;
     }
   }
   .removeBtn{
