--- a/src/containers/Manage/Apps/index.scss
+++ b/src/containers/Manage/Apps/index.scss
@@ -56,6 +56,18 @@
     font-size: 16px;
     margin-bottom: 30px;
   }
+  .selectItem{
+    margin-bottom: 20px;
+    .name{
+      display: inline-block;
+      margin-right:  20px;
+      width: 100px;
+      text-align: right;
+    }
+    .select{
+      width: 250px;
+    }
+  }
   .operation{
     text-align: center;
     button{
