--- a/src/containers/Manage/Categories/index.scss
+++ b/src/containers/Manage/Categories/index.scss
@@ -1,6 +1,6 @@
 @import '~scss/variables';
 
-.roles {
+.category {
   padding-top: $header-height;
   background: $background-color;
   .pageTitle{
@@ -14,7 +14,9 @@
     width: $content-width;
     margin: 0 auto;
   }
-
+  .buttonRight{
+    float: right;
+  }
 }
 .categories{
   text-align: center;
@@ -34,6 +36,48 @@
     font-size: 12px;
     color: $third-text-color;
     background: $background-color;
+  }
+}
+
+.categoryContent {
+  display: inline-block;
+  position: relative;
+  margin: 0 24px 24px 0;
+  &:nth-child(3n+2) {
+    margin-right: 0;
+  }
+  .handlePop {
+    position: absolute;
+    right: -60px;
+    top: 24px;
+    width: 180px;
+    text-align: center;
+  }
+}
+
+
+.modalContent{
+  .noteWord{
+    font-size: 16px;
+    margin-bottom: 30px;
+  }
+  .inputItem{
+    margin-bottom: 20px;
+    .name{
+      display: inline-block;
+      margin-right:  20px;
+      width: 100px;
+      text-align: right;
+    }
+    .input{
+      width: 250px;
+    }
+  }
+  .operation{
+    text-align: center;
+    button{
+      margin: 0 6px;
+    }
   }
 }
 
