--- a/src/components/Base/Modal/index.scss
+++ b/src/components/Base/Modal/index.scss
@@ -3,6 +3,7 @@
 .modal {
   position: relative;
   width: 744px;
+  max-height: 600px;
   margin: 0 auto;
   margin-top: 100px;
   border-radius: 3px;
