--- a/src/containers/Manage/Apps/Detail/index.scss
+++ b/src/containers/Manage/Apps/Detail/index.scss
@@ -9,16 +9,17 @@
   .rightInfo{
     margin-left: 384px;
   }
-  .mb24{
+  .detailOuter{
     position: relative;
     margin-bottom: 24px;
     .operation{
       position: absolute;
-      right: -24px;
+      right: -35px;
       top: 24px;
-      width: 120px;
+      width: 135px;
       text-align: center;
-      i.icon{
+      cursor: pointer;
+      i{
         transform: rotate(90deg);
       }
     }
@@ -112,7 +113,49 @@
     margin-bottom: 20px;
     >label{
       margin-right: 20px;
-      width: 120px;
+      width: 100px;
+      text-align: right;
+      color: $title-color;
+      font-weight: bold;
+    }
+    .input{
+      width: 300px;
+    }
+    .textarea{
+      padding: 7px 10px;
+      width: 300px;
+      height: 72px;
+      border-radius: 2px;
+      border: 1px solid #e7e7e7;
+      outline: none;
+      resize: none;
+      &:focus{
+        border: 1px solid $border-dark;
+      }
+    }
+    .textareaName{
+      position: relative;
+      bottom: 60px;
+    }
+  }
+}
+
+.versionOuter {
+  width: 360px;
+  padding: 24px 16px;
+  border-radius: 3px;
+  background-color: $background-color-lighter;
+  box-shadow: 0 1px 4px 0 rgba(48, 14, 86, 0.06), 0 4px 8px 0 rgba(0, 0, 0, 0.04);
+  .title{
+    line-height: 36px;
+    font-size: 16px;
+    font-weight: bold;
+    color: $title-color;
+    .all{
+      float: right;
+      font-size: 14px;
+      font-weight: normal;
+      cursor: pointer;
     }
   }
 }
