1.modify method params about table data 2.modify overview page data 3.add repos、runtimes delete method 4.add repos、runtimes modify method

--- a/src/pages/Manage/Repos/index.scss
+++ b/src/pages/Manage/Repos/index.scss
@@ -38,5 +38,17 @@
   }
 }
 
+.modalContent{
+  .noteWord{
+    font-size: 16px;
+    margin-bottom: 30px;
+  }
+  .operation{
+    text-align: center;
+    button{
+      margin: 0 6px;
+    }
+  }
+}
 
 
