--- a/src/pages/Manage/Runtimes/Detail/index.scss
+++ b/src/pages/Manage/Runtimes/Detail/index.scss
@@ -4,8 +4,8 @@
   position: relative;
   width: $content-width;
   margin: 0 auto 24px;
-
-
+  clear: both;
+  overflow: auto;
   .leftInfo{
     float: left;
     width: 360px;
@@ -13,13 +13,25 @@
   .rightInfo{
     margin-left: 384px;
   }
-  .mb24{
+  .detailOuter{
+    position: relative;
     margin-bottom: 24px;
+    .operation{
+      position: absolute;
+      right: -35px;
+      top: 24px;
+      width: 135px;
+      text-align: center;
+      cursor: pointer;
+      i{
+        transform: rotate(90deg);
+      }
+    }
   }
 }
 .wrapper2 {
   position: relative;
-  width: 774px;
+  width: 744px;
   margin: 0 auto 24px;
   background-color: #fff;
   border-radius: 3px;
