--- a/src/components/DetailCard/index.scss
+++ b/src/components/DetailCard/index.scss
@@ -37,6 +37,7 @@
       line-height: 17px;
       font-size: 12px;
       color: $grey-word;
+      word-break: break-word;
     }
     .preview{
       line-height: 17px;
@@ -55,7 +56,7 @@
     li{
       color: $purple-word;
       padding: 7px 0;
-      min-height: 16px;
+      min-height: 30px;
       line-height: 16px;
       font-size: 14px;
       list-style: none;
@@ -71,7 +72,7 @@
       text-align: right;
     }
     .labels{
-      float: left;
+      //float: left;
       margin-top: -18px;
       margin-left: 134px;
     }
