--- a/src/pages/Manage/Repos/Detail/index.scss
+++ b/src/pages/Manage/Repos/Detail/index.scss
@@ -4,7 +4,8 @@
   position: relative;
   width: $content-width;
   margin: 0 auto 24px;
-
+  clear: both;
+  overflow: auto;
   .leftInfo{
     float: left;
     width: 360px;
@@ -12,10 +13,35 @@
   .rightInfo{
     margin-left: 384px;
   }
+  .detailOuter{
+    position: relative;
+    margin-bottom: 24px;
+    .operation{
+      position: absolute;
+      right: -35px;
+      top: 24px;
+      width: 135px;
+      text-align: center;
+      cursor: pointer;
+      i{
+        transform: rotate(90deg);
+      }
+    }
+  }
+  .selector{
+    margin-bottom: -8px;
+    padding: 18px 24px 0;
+    .title{
+      margin-bottom: 10px;
+      line-height: 24px;
+      font-size: 12px;
+      color: $grey-word;
+    }
+  }
 }
 .wrapper2 {
   position: relative;
-  width: 774px;
+  width: 744px;
   margin: 0 auto 24px;
   background-color: #fff;
   border-radius: 3px;
