optimize webpack build, refactor server watcher on dev mode - remove useless packages due to performance - add vendor and common chunk build  for webpack

--- a/server/views/index.pug
+++ b/server/views/index.pug
@@ -26,5 +26,7 @@ html(lang="en")
     script.
       window.__INITIAL_STATE__ = !{state || '{}'}
 
-    //script(src= bundlePrefix + '/vendor.js').
+    if isDev
+      script(src= bundlePrefix + '/common.js').
+      script(src= bundlePrefix + '/vendor.dll.js').
     script(src= bundlePrefix + '/bundle.js').
