refactor: app, cluster, runtime, repo, category stores - update admin layout component - fix original store logic

--- a/src/components/Footer/index.scss
+++ b/src/components/Footer/index.scss
@@ -4,7 +4,7 @@ $line-height: $footer-height - 1;
 $fg-color: #a8a0b1;
 
 .footer {
-  position: absolute;
+  position: static;
   width: 100%;
   height: $footer-height;
   background-color: $background-color;
