--- a/src/components/UserInfo/TotalCard/index.scss
+++ b/src/components/UserInfo/TotalCard/index.scss
@@ -9,8 +9,9 @@
   height: 120px;
   text-align: right;
   border-radius: 3px;
-  background-color: #ffffff;
+  background-color: #fff;
   box-shadow: 0 1px 4px 0 rgba(48, 14, 86, 0.06), 0 4px 8px 0 rgba(0, 0, 0, 0.04);
+  cursor: pointer;
   &:last-child {
     margin-right: 0;
   }
