--- a/src/pages/Admin/Apps/Detail/index.scss
+++ b/src/pages/Admin/Apps/Detail/index.scss
@@ -25,15 +25,8 @@
     }
   }
 }
-.backTo{
-  width: $content-width;
-  margin: 24px auto 12px;
-  line-height: 20px;
-  font-size: 14px;
-  a{
-    color: $title-color;
-  }
-}
+
+
 .wrapper {
   position: relative;
   width: $content-width;
@@ -41,6 +34,7 @@
   clear: both;
   overflow: auto;
 }
+
 .wrapper2 {
   position: relative;
   width: 744px;
@@ -110,57 +104,34 @@
 .ml12{
   margin-left: 12px;
 }
-.modalContent{
-  .noteWord{
-    font-size: 16px;
-    margin-bottom: 30px;
+
+.inputItem{
+  margin-bottom: 20px;
+  &>label{
+    margin-right: 20px;
+    width: 100px;
+    text-align: right;
+    color: $title-color;
+    font-weight: bold;
   }
-  .selectItem{
-    margin-bottom: 20px;
-    .name{
-      display: inline-block;
-      margin-right:  20px;
-      width: 100px;
-      text-align: right;
-    }
-    .select{
-      width: 250px;
+  .input{
+    width: 300px;
+  }
+  .textarea{
+    padding: 7px 10px;
+    width: 300px;
+    height: 72px;
+    border-radius: 2px;
+    border: 1px solid #e7e7e7;
+    outline: none;
+    resize: none;
+    &:focus{
+      border: 1px solid $border-dark;
     }
   }
-  .operation{
-    text-align: center;
-    button{
-      margin: 0 6px;
-    }
-  }
-  .inputItem{
-    margin-bottom: 20px;
-    >label{
-      margin-right: 20px;
-      width: 100px;
-      text-align: right;
-      color: $title-color;
-      font-weight: bold;
-    }
-    .input{
-      width: 300px;
-    }
-    .textarea{
-      padding: 7px 10px;
-      width: 300px;
-      height: 72px;
-      border-radius: 2px;
-      border: 1px solid #e7e7e7;
-      outline: none;
-      resize: none;
-      &:focus{
-        border: 1px solid $border-dark;
-      }
-    }
-    .textareaName{
-      position: relative;
-      bottom: 60px;
-    }
+  .textareaName{
+    position: relative;
+    bottom: 60px;
   }
 }
 
