--- a/src/pages/Admin/Clusters/Detail/index.scss
+++ b/src/pages/Admin/Clusters/Detail/index.scss
@@ -93,13 +93,13 @@
     }
   }
 }
-.modelContent{
+
+.parameters{
   .name{
     display: inline-block;
     float: left;
     width: 260px;
     line-height: 16px;
-    font-family: Roboto;
     font-weight: bold;
     text-align: right;
     color: $title-color;
