--- a/src/pages/Admin/Overview/RepoList/index.scss
+++ b/src/pages/Admin/Overview/RepoList/index.scss
@@ -32,6 +32,12 @@
       }
     }
   }
+
+  .type {
+    margin: 12px 0 8px;
+    font-size: 12px;
+    color: $grey-word;
+  }
 }
 .reposBg{
   li {
