modify homme page data, add category,search mothods

--- a/src/components/Card/CardTitle/index.scss
+++ b/src/components/Card/CardTitle/index.scss
@@ -11,6 +11,7 @@
     float: right;
     font-size: 12px;
     color: $title-color;
+    cursor: pointer;
   }
   .show{
     display: inline-block;
