--- a/src/components/AppList/index.scss
+++ b/src/components/AppList/index.scss
@@ -1,3 +1,5 @@
+@import '~scss/variables';
+
 .appList {
   a {
     &:nth-child(3n+4) {
@@ -5,5 +7,11 @@
         margin-right: 0;
       }
     }
+  }
+  .noData{
+    padding: 20px 0;
+    text-align: center;
+    font-size: 16px;
+    color: $grey;
   }
 }
